--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -93,12 +93,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "id": "d11cc7af",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "12:59PM 45s WARNING [check_lengths]: For path table, component=cpw1, key=trace has short segments that could cause issues with fillet. Values in (1-2)  are index(es) in shapely geometry.\n",
+      "12:59PM 45s WARNING [check_lengths]: For path table, component=cpw1, key=cut has short segments that could cause issues with fillet. Values in (1-2)  are index(es) in shapely geometry.\n"
+     ]
+    }
+   ],
    "source": [
-    "stg_opts = Dict(pos_x = '-1250um',\n",
+    "stg_opts = Dict(pos_x = '-2000um',\n",
     "                pos_y = '1200um',\n",
     "                orientation = '90',\n",
     "                # width = cpw_width)\n",
@@ -124,7 +133,7 @@
     "                                               pin = 'short')),\n",
     "                lead = Dict(start_straight = '50um'),\n",
     "                fillet = '49.9um',\n",
-    "                total_length = '3815um',\n",
+    "                total_length = '4000um',\n",
     "                trace_width = cpw_width,\n",
     "                meander = Dict(spacing = '100um'),\n",
     "                trace_gap = '5.1um')\n",
@@ -133,12 +142,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "id": "ce8993d2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "stg_opts = Dict(pos_x = '1250um',\n",
+    "stg_opts = Dict(pos_x = '2000um',\n",
     "                pos_y = '1700um',\n",
     "                orientation = '-90',\n",
     "                # width = cpw_width)\n",
@@ -164,7 +173,7 @@
     "                                               pin = 'short')),\n",
     "                lead = Dict(start_straight = '50um'),\n",
     "                fillet = '49.9um',\n",
-    "                total_length = '3715um',\n",
+    "                total_length = '8000um',\n",
     "                trace_width = cpw_width,\n",
     "                meander = Dict(spacing = '100um'),\n",
     "                trace_gap = '5.1um')\n",
@@ -173,12 +182,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "id": "e5399eaa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "stg_opts = Dict(pos_x = '-1250um',\n",
+    "stg_opts = Dict(pos_x = '-2000um',\n",
     "                pos_y = '-300um',\n",
     "                orientation = '90',\n",
     "                # width = cpw_width)\n",
@@ -204,7 +213,7 @@
     "                                               pin = 'short')),\n",
     "                lead = Dict(start_straight = '50um'),\n",
     "                fillet = '49.9um',\n",
-    "                total_length = '3620um',\n",
+    "                total_length = '8000um',\n",
     "                trace_width = cpw_width,\n",
     "                meander = Dict(spacing = '100um'),\n",
     "                trace_gap = '5.1um')\n",
@@ -213,12 +222,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "id": "f1735625",
    "metadata": {},
    "outputs": [],
    "source": [
-    "stg_opts = Dict(pos_x = '1250um',\n",
+    "stg_opts = Dict(pos_x = '2000um',\n",
     "                pos_y = '250um',\n",
     "                orientation = '-90',\n",
     "                # width = cpw_width)\n",
@@ -244,7 +253,7 @@
     "                                               pin = 'short')),\n",
     "                lead = Dict(start_straight = '50um'),\n",
     "                fillet = '49.9um',\n",
-    "                total_length = '3535um',\n",
+    "                total_length = '8000um',\n",
     "                trace_width = cpw_width,\n",
     "                meander = Dict(spacing = '100um'),\n",
     "                trace_gap = '5.1um')\n",
@@ -253,12 +262,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "id": "bd103ab5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "stg_opts = Dict(pos_x = '-1250um',\n",
+    "stg_opts = Dict(pos_x = '-2000um',\n",
     "                pos_y = '-1500um',\n",
     "                orientation = '90',\n",
     "                # width = cpw_width)\n",
@@ -284,7 +293,7 @@
     "                                               pin = 'short')),\n",
     "                lead = Dict(start_straight = '50um'),\n",
     "                fillet = '49.9um',\n",
-    "                total_length = '3450um',\n",
+    "                total_length = '8000um',\n",
     "                trace_width = cpw_width,\n",
     "                meander = Dict(spacing = '100um'),\n",
     "                trace_gap = '5.1um')\n",
@@ -293,12 +302,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "id": "2eed726e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "stg_opts = Dict(pos_x = '1250um',\n",
+    "stg_opts = Dict(pos_x = '2000um',\n",
     "                pos_y = '-1000um',\n",
     "                orientation = '-90',\n",
     "                # width = cpw_width)\n",
@@ -324,7 +333,7 @@
     "                                               pin = 'short')),\n",
     "                lead = Dict(start_straight = '50um'),\n",
     "                fillet = '49.9um',\n",
-    "                total_length = '3375um',\n",
+    "                total_length = '8000um',\n",
     "                trace_width = cpw_width,\n",
     "                meander = Dict(spacing = '100um'),\n",
     "                trace_gap = '5.1um')\n",
@@ -333,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "id": "59a42c63",
    "metadata": {},
    "outputs": [],
@@ -374,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "id": "88705d45",
    "metadata": {},
    "outputs": [],
@@ -390,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "id": "1511383b",
    "metadata": {},
    "outputs": [],
@@ -403,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "766fbb43",
    "metadata": {},
    "outputs": [
@@ -411,7 +420,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "12:28PM 14s WARNING [_import_junction_gds_file]: Not able to find file:\"../resources/Fake_Junctions.GDS\".  Not used to replace junction. Checked directory:\"d:\\andre\\resources\".\n"
+      "12:59PM 41s WARNING [_import_junction_gds_file]: Not able to find file:\"../resources/Fake_Junctions.GDS\".  Not used to replace junction. Checked directory:\"d:\\andre\\resources\".\n"
      ]
     },
     {
@@ -420,7 +429,7 @@
        "1"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
