--- a/linear_resonators.ipynb
+++ b/linear_resonators.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "737b15fc",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "e2101919",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c4b5a2f2",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c2a95b0d",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "id": "d11cc7af",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "id": "ce8993d2",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "id": "e5399eaa",
    "metadata": {},
    "outputs": [],
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "id": "f1735625",
    "metadata": {},
    "outputs": [],
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "id": "bd103ab5",
    "metadata": {},
    "outputs": [],
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "id": "2eed726e",
    "metadata": {},
    "outputs": [],
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "id": "59a42c63",
    "metadata": {},
    "outputs": [],
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "id": "88705d45",
    "metadata": {},
    "outputs": [],
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "id": "1511383b",
    "metadata": {},
    "outputs": [],
@@ -402,35 +402,206 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b7768ef4",
+   "metadata": {},
+   "source": [
+    "# Save design as .py file"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "ab4f5c5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "script_string = design.to_python_script()\n",
+    "with open('linear_resonators_design.py', 'w') as file:\n",
+    "    file.write(script_string)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a8a598d0",
+   "metadata": {},
+   "source": [
+    "# Save to GDS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "766fbb43",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "12:28PM 14s WARNING [_import_junction_gds_file]: Not able to find file:\"../resources/Fake_Junctions.GDS\".  Not used to replace junction. Checked directory:\"d:\\andre\\resources\".\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a_gds = design.renderers.gds\n",
     "a_gds.options['cheese']['view_in_file']['main'][1]=False\n",
     "a_gds.options['no_cheese']['view_in_file']['main'][1] = False\n",
     "\n",
     "a_gds.export_to_gds('6LR_test.gds')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "4d90aec1",
+   "metadata": {},
+   "source": [
+    "# Simulation (EPR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb15cb25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qiskit_metal.renderers.renderer_ansys_pyaedt.hfss_renderer_eigenmode_aedt import QHFSSEigenmodePyaedt\n",
+    "import pyEPR as epr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b576f5a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "em1_aedt = QHFSSEigenmodePyaedt(design, \n",
+    "                                'andre_resonators_proj',\n",
+    "                                'andre_resonators_design',\n",
+    "                                initiate=True)\n",
+    "hfss_aedt = em1_aedt.current_app\n",
+    "\n",
+    "#### Computer's variables\n",
+    "num_cores=16\n",
+    "num_gpu=1\n",
+    "\n",
+    "#### Setup Name\n",
+    "setup_name = 'ResonatorSetup'\n",
+    "\n",
+    "\n",
+    "# Change silicon permitivity to super cold silicon\n",
+    "em1_aedt.current_app.materials['silicon'].permittivity = 11.45"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8828b40e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_simulation():\n",
+    "    #### Computer's variables\n",
+    "    num_cores=16\n",
+    "    num_gpu=1\n",
+    "    \n",
+    "    #### Setup Name\n",
+    "    setup_name = 'ResonatorSetup'\n",
+    "    \n",
+    "    # # Change Silicon to Ultracold Silicon\n",
+    "    # hfss_aedt.materials['silicon'].permittivity = 11.45\n",
+    "    \n",
+    "    # Add project variables\n",
+    "    add_project_level_vars(em1_aedt)\n",
+    "    \n",
+    "    # Clear setups\n",
+    "    if len(hfss_aedt.setups) != 0:\n",
+    "        hfss_aedt.setups[0].delete()\n",
+    "    \n",
+    "    # Add Setup\n",
+    "    setup_options = dict(\n",
+    "        name= setup_name,\n",
+    "        MinimumFrequency = 3,  # GHz\n",
+    "        NumModes= 1,\n",
+    "        MaxDeltaFreq = 0.1,\n",
+    "        MaximumPasses= 50,\n",
+    "        MinimumPasses= None,\n",
+    "        MinimumConvergedPasses= 2,\n",
+    "        PercentRefinement= 30,\n",
+    "        BasisOrder= None\n",
+    "    )\n",
+    "    \n",
+    "    em1_aedt.add_hfss_em_setup(**setup_options)\n",
+    "    \n",
+    "    hfss_aedt.analyze_setup(name=setup_name, \n",
+    "                            num_cores=num_cores, \n",
+    "                            num_gpu=num_gpu)\n",
+    "    \n",
+    "    # Make silicon ultra cold\n",
+    "    hfss_aedt.materials['silicon'].permittivity = 11.45\n",
+    "\n",
+    "def add_project_level_vars(self):\n",
+    "    \"\"\"\n",
+    "    Finds all names, inductances, and capacitances of Josephson Junctions rendered into ANSYS.\n",
+    "    \"\"\"\n",
+    "    # Get all josephson junctions from rendered components table\n",
+    "    geom_table = self.path_poly_and_junction_with_valid_comps\n",
+    "    all_jjs = geom_table.loc[geom_table['name'].str.contains('rect_jj')]\n",
+    "    all_jjs = all_jjs.reset_index(drop=True)\n",
+    "\n",
+    "    for i, row in all_jjs.iterrows():\n",
+    "        ### Parsing Data ###\n",
+    "        component = str(row['component'])\n",
+    "        name = str(row['name'])\n",
+    "        inductance = row['aedt_hfss_inductance']  # Lj in Henries\n",
+    "        capacitance = row['aedt_hfss_capacitance']  # Cj in Farads\n",
+    "\n",
+    "        # Get ANSYS > Model > Sheet corresponding to JJs\n",
+    "        rect_name = 'JJ_rect_Lj_' + component + '_' + name\n",
+    "\n",
+    "        # Get ANSYS > Model > Lines corresponding to JJs\n",
+    "        line_name = 'JJ_Lj_' + component + '_' + name + '_'\n",
+    "\n",
+    "        ### Appending data ###\n",
+    "        # Add global Lj and Cj variables to ANSYS (for EPR analysis)\n",
+    "        ansys_Lj_name = f'Lj_{i}'\n",
+    "        ansys_Cj_name = f'Cj_{i}'\n",
+    "\n",
+    "        self.set_variable(ansys_Lj_name, str(inductance * 1E9) + 'nH')\n",
+    "        self.set_variable(ansys_Cj_name, str(capacitance * 1E15) + 'fF')\n",
+    "\n",
+    "def run_analysis():\n",
+    "    '''\n",
+    "    After finishing simulation, analyze results\n",
+    "    '''\n",
+    "    em1_aedt.run_epr()\n",
+    "    \n",
+    "    # Extract observables of int\n",
+    "    observables = extract_observables(em1_aedt.epr_quantum_analysis)\n",
+    "    return observables\n",
+    "\n",
+    "\n",
+    "\n",
+    "def extract_observables(epra):\n",
+    "    '''\n",
+    "    Extract observables from EPR quantum analysis\n",
+    "    \n",
+    "    Args:\n",
+    "        epra (epr.QuantumAnalysis): Raw EPR Quanutm analysis class\n",
+    "        cos_trunc (int, optional): amount of terms to consider in cosine expansion\n",
+    "        fock_trunc (int, optional): size of fock space before truncation\n",
+    "        \n",
+    "    Returns:\n",
+    "        package (dict): simulated observables\n",
+    "    '''\n",
+    "    \n",
+    "    # Extraction of variables\n",
+    "    omegas = epra.get_frequencies()\n",
+    "    chis = epra.get_chis()\n",
+    "    other_data = epra.data\n",
+    "    \n",
+    "    package = dict(qubit_freq_MHz = omegas['0'][0],\n",
+    "                   qubit_anharmonicity_MHz = chis[0][0],\n",
+    "                   other_data = str(other_data))\n",
+    "    \n",
+    "    return package"
    ]
   }
  ],
