--- a/linear_resonators_epr.ipynb
+++ b/linear_resonators_epr.ipynb
@@ -730,19 +730,77 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "hfss.analyze_sweep('LR_sweep', 'Setup')\n",
-    "\n"
+    "hfss.analyze_sweep('LR_sweep', 'Setup')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1b9ada5a",
+   "execution_count": 35,
+   "id": "2488e9b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(                       S11                 S21\n",
+       " 6.6000 -0.002647-0.014852j -0.985965+0.166268j\n",
+       " 6.6001 -0.002647-0.014851j -0.985965+0.166271j\n",
+       " 6.6002 -0.002647-0.014851j -0.985964+0.166274j\n",
+       " 6.6003 -0.002647-0.014851j -0.985964+0.166276j\n",
+       " 6.6004 -0.002647-0.014851j -0.985963+0.166279j\n",
+       " ...                    ...                 ...\n",
+       " 6.8996 -0.002967-0.016936j -0.984891+0.172317j\n",
+       " 6.8997 -0.002967-0.016936j -0.984891+0.172320j\n",
+       " 6.8998 -0.002967-0.016935j -0.984890+0.172323j\n",
+       " 6.8999 -0.002968-0.016935j -0.984890+0.172326j\n",
+       " 6.9000 -0.002968-0.016935j -0.984889+0.172329j\n",
+       " \n",
+       " [3000 rows x 2 columns],\n",
+       " <Figure size 1000x600 with 2 Axes>)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hfss.plot_params(['S11', 'S21'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "cf2177ab",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# extract the S21 parameters\n",
+    "freqs, Pcurves, Pparams = hfss.get_params(['S21'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "1b9ada5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6760153384.46149"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# find armin \n",
+    "f_res = freqs[np.argmin(np.abs(Pparams.S21.values))]\n",
+    "f_res"
+   ]
   },
   {
    "cell_type": "code",
