--- a/linear_resonators_epr.ipynb
+++ b/linear_resonators_epr.ipynb
@@ -804,10 +804,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "ff5c25f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>S21</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6.6000</th>\n",
+       "      <td>-0.985965+0.166268j</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6.6001</th>\n",
+       "      <td>-0.985965+0.166271j</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6.6002</th>\n",
+       "      <td>-0.985964+0.166274j</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6.6003</th>\n",
+       "      <td>-0.985964+0.166276j</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6.6004</th>\n",
+       "      <td>-0.985963+0.166279j</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6.8996</th>\n",
+       "      <td>-0.984891+0.172317j</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6.8997</th>\n",
+       "      <td>-0.984891+0.172320j</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6.8998</th>\n",
+       "      <td>-0.984890+0.172323j</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6.8999</th>\n",
+       "      <td>-0.984890+0.172326j</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6.9000</th>\n",
+       "      <td>-0.984889+0.172329j</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3000 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       S21\n",
+       "6.6000 -0.985965+0.166268j\n",
+       "6.6001 -0.985965+0.166271j\n",
+       "6.6002 -0.985964+0.166274j\n",
+       "6.6003 -0.985964+0.166276j\n",
+       "6.6004 -0.985963+0.166279j\n",
+       "...                    ...\n",
+       "6.8996 -0.984891+0.172317j\n",
+       "6.8997 -0.984891+0.172320j\n",
+       "6.8998 -0.984890+0.172323j\n",
+       "6.8999 -0.984890+0.172326j\n",
+       "6.9000 -0.984889+0.172329j\n",
+       "\n",
+       "[3000 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   }
  ],
